@@ -1,3 +1,9 @@
+Fri Nov 14 10:52:30 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimPrefsDialog.cpp:
+	  - Hide the other preference pages for now, since they're currently
+	    empty.
+
 Tue Nov 11 23:32:48 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* mkipk.sh:
